cabal-version:      3.4
name:               goog
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             andrii
maintainer:         25188+unorsk@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable goog
    import:           warnings
    main-is:          Main.hs
    other-modules:  
        ArraysAndHashing
        , GroupAnagrams
        , TopKFrequentElements0349
        , TimeSort
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, containers, async
    hs-source-dirs:   haskell
    default-language: GHC2021
