cabal-version:   3.4
name:            goog
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          andrii
maintainer:      25188+unorsk@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    ArraysAndHashing
    GroupAnagrams
    LC

  build-depends:
    , async
    , base                  ^>=4.18.0.0
    , containers
    , unordered-containers
    , vector

  hs-source-dirs:   haskell/lib
  default-language: GHC2021

executable goog
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base  ^>=4.18.0.0
    , goog

  hs-source-dirs:   haskell/app
  default-language: GHC2021

test-suite goog-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   haskell/test
  main-is:          Main.hs
  build-depends:
    , base   ^>=4.18.0.0
    , goog
    , hspec
